actualizacion templates y views

--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -1,8 +1,12 @@
-{% extends "base.html" %}
-{% block title_head %}
-Inicio
-{% endblock title_head %}
+{% extends 'base.html' %}
+
+{% block title_head %}Inicio{% endblock %}
 
 {% block h1_header %}
-Tercera pre-entrega
+    Bienvenido a la Página de Inicio
 {% endblock h1_header %}
+
+{% block main %}
+    <h2>Página de Inicio</h2>
+    <p>Bienvenido a la página de inicio de mi aplicación Django.</p>
+{% endblock %}
