--- a/aplicacion/templates/aplicacion/nuevo_estudiante.html
+++ b/aplicacion/templates/aplicacion/nuevo_estudiante.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Nuevo Estudiante{% endblock %}
+{% block title_head %}Nuevo Estudiante{% endblock %}
 
-{% block content %}
+{% block h1_header %}
+    Crear Nuevo Estudiante
+{% endblock h1_header %}
+
+{% block main %}
     <h2>Nuevo Estudiante</h2>
     <form method="post">
         {% csrf_token %}
