actualizacion base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,11 +25,8 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href={% url "inicio" %}>Inicio</a>
-                {% comment %} <a class="navbar-brand" href={% url "probando" %}>Probando</a> {% endcomment %}
-                {% comment %} <a class="navbar-brand" href={% url "autos" %}>Autos</a> {% endcomment %}
-                {% comment %} <a class="navbar-brand" href={% url "crear_auto" "Fiat" "Duna"%}>Creacion Auto</a> {% endcomment %}
-                {% comment %} <a class="navbar-brand" href={% url "crear_auto_v2" %}>Creacion Auto</a> {% endcomment %}
-                {% comment %} <a class="btn btn-primary" href="#signup">Sign Up</a> {% endcomment %}
+                <a class="navbar-brand" href={% url "lista_estudiantes" %}>Lista Estudiante</a>
+                <a class="navbar-brand" href={% url "nuevo_estudiante" %}>Nuevo Estudiante</a>
             </div>
         </nav>
         <!-- Masthead-->
