actualizacion index.html

--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -3,10 +3,10 @@
 {% block title_head %}Inicio{% endblock %}
 
 {% block h1_header %}
-    Bienvenido a la Página de Inicio
+    DJANGO
 {% endblock h1_header %}
 
 {% block main %}
-    <h2>Página de Inicio</h2>
-    <p>Bienvenido a la página de inicio de mi aplicación Django.</p>
+    <h2>Tercera Pre-Entrega</h2>
+    <p>Web Django con patro MVT</p>
 {% endblock %}
