actualizacion index.html

--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -8,5 +8,5 @@
 
 {% block main %}
     <h2>Tercera Pre-Entrega</h2>
-    <p>Web Django con patro MVT</p>
+    <p>Web Django con patrón MVT</p>
 {% endblock %}
