ultimos ajustes y creacion de super usuario

--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -3,7 +3,7 @@
 {% block title_head %}Inicio{% endblock %}
 
 {% block h1_header %}
-    DJANGO
+    INICIO
 {% endblock h1_header %}
 
 {% block main %}
