--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,12 @@
                 <a class="navbar-brand" href={% url "lista_estudiantes" %}>Lista Estudiante</a>
                 <a class="navbar-brand" href={% url "nuevo_estudiante" %}>Nuevo Estudiante</a>
             
-                {% if user.is_authenticated %}
+            {% if user.is_authenticated %}
                 <a class="navbar-brand" href="{% url 'logout' %}">Cerrar Sesión</a>
                 <a class="navbar-brand" href="{% url 'perfil' %}">Perfil</a>
             {% else %}
-                <a class="navbar-brand" href="{% url 'login' %}">Iniciar Sesión</a>
-                <a class="navbar-brand" href="{% url 'registro' %}">Registro</a>
+                <a class="btn btn-primary" href="{% url 'login' %}">Iniciar Sesión</a>
+                <a class="btn btn-primary" href="{% url 'registro' %}">Registro</a>
             {% endif %}           
             </div>
         </nav>
@@ -47,7 +47,7 @@
                             <!-- Page heading-->
                             <h1 class="mb-5">
                                 {% block h1_header %}
-                                Soy el base
+                                Hola Amorcito
                                 {% endblock h1_header %}
                             </h1>
                         </div>
@@ -58,7 +58,9 @@
         {% endblock header %}
 
         <main>
-            {% block main %}{% endblock main %}
+            {% block main %}
+            
+            {% endblock main %}
         </main>
 
         <!-- Footer-->
@@ -103,4 +105,4 @@
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
-</html>
+</html> 
