--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -4,7 +4,7 @@
   Iniciar Sesión
 {% endblock titulo %}
 
-{% block contenido %}
+{% block main %}
   <form method="post">
     {% csrf_token %}
     <div class="mb-3">
@@ -19,4 +19,4 @@
   </form>
 
   <a href="{% url 'registro' %}" class="mt-3">¿No tienes una cuenta? Regístrate aquí.</a>
-{% endblock contenido %}
+{% endblock main %}
