--- a/usuarios/templates/usuarios/registro.html
+++ b/usuarios/templates/usuarios/registro.html
@@ -4,7 +4,7 @@
   Registro de usuario
 {% endblock titulo %}
 
-{% block contenido %}
+{% block main %}
   <form method="post">
     {% csrf_token %}
     <div class="mb-3">
@@ -25,4 +25,4 @@
     </div>
     <button type="submit" class="btn btn-primary">Registrarse</button>
   </form>
-{% endblock contenido %}
+{% endblock main %}
