--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -1,8 +1,10 @@
 {% extends 'usuarios/base_usuarios.html' %}
 
-{% block titulo %}
-  Iniciar Sesión
-{% endblock titulo %}
+{% block h1_header %}
+    Iniciar Sesión
+{% endblock h1_header %}
+     
+
 
 {% block main %}
   <form method="post">
