--- a/usuarios/templates/usuarios/registro.html
+++ b/usuarios/templates/usuarios/registro.html
@@ -1,8 +1,8 @@
 {% extends 'usuarios/base_usuarios.html' %}
 
-{% block titulo %}
-  Registro de usuario
-{% endblock titulo %}
+{% block h1_header %}
+    Registro de Usuario
+{% endblock h1_header %}
 
 {% block main %}
   <form method="post">
