--- a/usuarios/templates/usuarios/cambiar_pass.html
+++ b/usuarios/templates/usuarios/cambiar_pass.html
@@ -1,14 +1,14 @@
 {% extends 'usuarios/base_usuarios.html' %}
 
 {% block h1_header %}
-    Registro de Usuario
+    Cambiar Contraseña
 {% endblock h1_header %}
 
 {% block main %}
-  <form method="post" enctype="multipart/form-data">
+  <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Registrarse</button>
+    {{ form.as_p }} 
+    <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
   </form>
   {% if form.errors %}
     <div class="alert alert-danger" role="alert">
