--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -3,20 +3,11 @@
 {% block h1_header %}
     Iniciar Sesión
 {% endblock h1_header %}
-     
-
 
 {% block main %}
   <form method="post">
     {% csrf_token %}
-    <div class="mb-3">
-      <label for="username" class="form-label">Nombre de usuario:</label>
-      <input type="text" class="form-control" id="username" name="username" required>
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Contraseña:</label>
-      <input type="password" class="form-control" id="password" name="password" required>
-    </div>
+    {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
   </form>
 
