--- a/usuarios/templates/usuarios/editar_perfil.html
+++ b/usuarios/templates/usuarios/editar_perfil.html
@@ -1,12 +1,16 @@
 {% extends 'usuarios/base_usuarios.html' %}
 
-{% block titulo %}
-  Editar perfil
-{% endblock titulo %}
+{% block h1_header %}
+    Editar Perfil
+{% endblock h1_header %}
 
-{% block contenido %}
-  <form method="post" enctype="multipart/form-data">
+{% block main %}
+  <form action={% url "editar_perfil" %}  method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <div class="mb-3">
-      <label for="first_name" class="form-label">Nombre:</label>
-      <input type="text" class="form-control" id="first_name" name="first_name" required
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+  </form>
+ 
+<a href={% url "cambiar_pass" %}>Cambiar password</a>
+
+{% endblock main %}
