Creacion de templates en aplicacion para editar, ver y eliminar estudiantes. Adecuacion de forms.py, models.py y views.py

--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -3,7 +3,7 @@
 {% block title_head %}Inicio{% endblock %}
 
 {% block h1_header %}
-    INICIO
+    Escuela de Rock
 {% endblock h1_header %}
 
 {% block main %}
