--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -8,6 +8,9 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
+    {% if request.GET.next %}
+    <input type="hidden" name="next" value="{{ request.GET.next }}">
+    {% endif %}
     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
   </form>
 
