--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title_head %}Inicio{% endblock %}
+{% block title_head %}
+Inicio
+{% endblock %}
 
 {% block h1_header %}
     Escuela de Rock
