--- a/aplicacion/static/css/styles.css
+++ b/aplicacion/static/css/styles.css
@@ -10,6 +10,19 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.avatar-container {
+  display: flex;
+  align-items: center;
+}
+
+.avatar {
+  width: 100px; 
+  height: 100px;
+  border-radius: 50%; 
+  object-fit: cover; 
+  margin-right: 10px; 
+}
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
