--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -5,10 +5,9 @@ Inicio
 {% endblock %}
 
 {% block h1_header %}
-    Escuela de Rock
+    Curso de Programación
 {% endblock h1_header %}
 
 {% block main %}
-    <h2>Tercera Pre-Entrega</h2>
-    <p>Web Django con patrón MVT</p>
+    
 {% endblock %}
