--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -11,7 +11,7 @@
     {% if request.GET.next %}
     <input type="hidden" name="next" value="{{ request.GET.next }}">
     {% endif %}
-    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+    <button type="submit" class="btn btn-success">Iniciar Sesión</button>
   </form>
 
   <a href="{% url 'registro' %}" class="mt-3">¿No tienes una cuenta? Regístrate aquí.</a>
