eliminacion de la obligatoriedad de todos los campos en editar perfil

--- a/aplicacion/templates/aplicacion/lista_estudiantes.html
+++ b/aplicacion/templates/aplicacion/lista_estudiantes.html
@@ -13,9 +13,9 @@
     <ul>
         {% for estudiante in estudiantes %}
         <div class="estudiante">
-            <h3>{{ estudiante.nombre }} {{ estudiante.apellido }}</h3>
+            {% comment %} <h3>{{ estudiante.nombre }} {{ estudiante.apellido }}</h3> {% endcomment %}
             {% if user.is_superuser %}
-                <p>Profesor: {{ estudiante.profesor.username }}</p>
+                <p><strong>Profesor: {{ estudiante.profesor.username }}</strong></p>
             {% endif %}
             <li>
                 {{ estudiante.nombre }} {{ estudiante.apellido }}
